--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ GGJ/.vs/GGJ/v15/Server/sqlite3/db.lock
 GGJ/.vs/GGJ/v15/Server/sqlite3/storage.ide
 GGJ/.vs/GGJ/v15/Server/sqlite3/storage.ide-shm
 GGJ/.vs/GGJ/v15/Server/sqlite3/storage.ide-wal
+*.lock
