ignore some files

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,18 @@ GGJ/.vs/GGJ/v15/Server/sqlite3/db.lock
 GGJ/.vs/GGJ/v15/Server/sqlite3/storage.ide
 GGJ/.vs/GGJ/v15/Server/sqlite3/storage.ide-shm
 GGJ/.vs/GGJ/v15/Server/sqlite3/storage.ide-wal
+Unity_Project_Vrij/.vs/Unity_Project_Vrij/v15/Server/sqlite3/db.lock
+Unity_Project_Vrij/.vs/Unity_Project_Vrij/v15/Server/sqlite3/storage.ide-shm
+Unity_Project_Vrij/.vs/Unity_Project_Vrij/v15/Server/sqlite3/storage.ide-wal
+Unity_Project_Vrij/Assets/_Materials.meta
+Unity_Project_Vrij/Assets/_Prefabs.meta
+Unity_Project_Vrij/Assets/_Sprites.meta
+Unity_Project_Vrij/Assets/_Textures.meta
+Unity_Project_Vrij/.vs/Unity_Project_Vrij/v15/Server/sqlite3/storage.ide-shm
+Unity_Project_Vrij/.vs/Unity_Project_Vrij/v15/Server/sqlite3/storage.ide-wal
+Unity_Project_Vrij/Assets/_Textures.meta
+Unity_Project_Vrij/Assets/_Sprites.meta
+Unity_Project_Vrij/Assets/_Prefabs.meta
+Unity_Project_Vrij/Assets/_Materials.meta
+Unity_Project_Vrij/.vs/Unity_Project_Vrij/v15/Server/sqlite3/storage.ide-wal
+Unity_Project_Vrij/.vs/Unity_Project_Vrij/v15/Server/sqlite3/storage.ide-shm
