--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ Unity_Project_Vrij/Assets/_Scripts/WaveSystem.meta
 Unity_Project_Vrij/Assets/_Scripts/WaveSystem/EnemySpawner.cs.meta
 Unity_Project_Vrij/ProjectSettings/ProjectVersion.txt
 
+Unity_Project_Vrij/Assets/_Sprites.meta
+Unity_Project_Vrij/Assets/_Textures.meta
